--- a/layout.css
+++ b/layout.css
@@ -1,6 +1,7 @@
 /************ General ********************/
 html{
     margin: 2%;
+    background-color: rgb(233, 235, 235);
 }
 
 h2{ 
@@ -17,7 +18,7 @@ img {
 
 /*************** Kategori ****************/
 .header h1 span{
-    color: rgb(225, 166, 56);
+    color: rgb(255, 166, 2);
     transform: scaleX(-1) translateX(-0.2rem);
     display: inline-block;
     cursor: pointer;
@@ -33,10 +34,6 @@ img {
     font-size: 40px; 
 }
 
-.kategori{
-    background-color: rgb(233, 235, 235);
-}
-
 .kategoriliste {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -47,7 +44,7 @@ img {
 .kategoriliste a{
     text-decoration: none;
     color: rgb(233, 235, 235);
-    background-color: 	#917465;
+    background-color: 	#725d52;
     padding-left: 1em;
     padding-right: 1em;
     padding-top: 2em;
