--- a/layout.css
+++ b/layout.css
@@ -138,11 +138,11 @@ nav :hover{
 
 article{
     border-style: solid;
-    border-color: rgb(254, 197, 89);
+    border-color: rgb(254, 197, 89, 0.5);
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    background-color: rgb(215, 197, 167);
+    background-color: rgba(58, 47, 28, 0.2);
     border-radius: 10px;
 }
 
@@ -153,6 +153,33 @@ article a{
 
 article a:hover{
     color: rgb(76, 65, 42);
+}
+
+.onSale .price{
+  color: rgb(64, 63, 63);
+  text-decoration: line-through;
+}
+
+.discount{
+    background-color: orange;
+    border-radius: 5%;
+    padding-left: 5%; 
+}
+
+
+
+.soldOut{
+    background-color: rgba(58, 58, 58, 0.5);
+}
+
+.soldOut .price{
+    display: none;
+}
+
+.udsolgt{
+    background-color: rgb(252, 247, 247, 0.9);
+    padding: 10px;
+    text-align: center;
 }
 
 /************ Produkt *************/
