--- a/layout.css
+++ b/layout.css
@@ -162,6 +162,7 @@ article{
 article a{
     color: #040101;
     font-size: 17px;
+    text-underline-offset: 5px;
 }
 
 article a:hover{
@@ -205,7 +206,7 @@ article a:hover{
     width: 100%;
 }
 
-.buy{
+.purchaseBox{
     background-color: #c0a89d;
     padding: 2em;
     border-color: rgb(247, 205, 128);
@@ -213,7 +214,7 @@ article a:hover{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.buy button{
+.purchaseBox button{
     display: block;
     width: 50%;
    margin-top: 1em;
@@ -225,7 +226,7 @@ article a:hover{
    font-size: 20px;
 }
 
-.buy button:hover{
+.purchaseBox button:hover{
     background-color: #e6e5e3;
 }
 
@@ -266,9 +267,13 @@ dt{
     margin-right: 10px;
 }
 
+.breadcrumbs a:hover{
+    color: rgb(182, 151, 95);
+}
+
 /* web version */
 @media screen and (min-width: 900px){
-   .buy{
+   .purchaseBox{
     order: 2;
     margin-left: 60px;
    }
